# runde15-turtlemail

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  babel.cfg  cliff.toml  docker-compose.dev.yml  docker-compose.yml  manage  manage.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js  tox.ini  tsconfig.json  vite.config.ts
docker/: entrypoint.sh  env  env-dev  nginx-app.conf  nginx-server.conf  vite.Dockerfile
src/: htmx.ts  main.ts  style.css  util.ts
src/components/: index.ts
src/components/geo/: LocationSelector.ce.vue  Map.vue  icon-helpers.ts  icon.ts  map.ts  types.ts
src/public/: manifest.json
turtlemail/: admin.py  apps.py  asgi.py  babel_extract.py  consumers.py  forms.py  models.py  notification_service.py  routing.py  settings.py  stats.py  tasks.py  types.py  urls.py  util.py  views.py  widgets.py  wsgi.py
turtlemail/base/: env.py  mail.py  storage.py  vite.py
turtlemail/fixtures/: demo_data.yaml  initial_data.yaml
turtlemail/human_id/: dictionary.py  human_id.py
turtlemail/jinja2/: _form_div.jinja
turtlemail/locale/de/LC_MESSAGES/: django.po
turtlemail/management/commands/: initdata.py  turtlestats.py
turtlemail/migrations/: 0001_initial.py  0002_add_location_stay.py  0003_add_user_to_location.py  0004_packet_route_routestep_packet_current_route_and_more.py  0005_alter_deliverylog_options_alter_routestep_options_and_more.py  0006_remove_packet_turtlemail__receive_20cca5_idx_and_more.py  0007_alter_packet_options_alter_deliverylog_packet_and_more.py  0008_remove_location_lat_remove_location_lon_and_more.py  0009_alter_deliverylog_options_alter_deliverylog_action_and_more.py  0009_invite.py  0010_stay_inactive_until_alter_deliverylog_action_and_more.py  0011_alter_deliverylog_action.py  0012_alter_stay_inactive_until.py  0013_stay_deleted.py  0014_alter_routestep_options_alter_deliverylog_action.py  0015_deliverylog_description_alter_deliverylog_action.py  0016_alter_invite_options_invite_accepted_at_and_more.py  0016_chatmessage_systemchatmessage_userchatmessage.py  0016_location_deleted.py  0016_userchatmessage_systemchatmessage.py  0017_alter_chatmessage_options.py  0017_alter_location_is_home.py  0018_alter_routestep_options_and_more.py  0018_chatmessage_systemchatmessage_userchatmessage.py  0019_route_created_at.py  0020_chatmessage_systemchatmessage_userchatmessage.py  0021_alter_chatmessage_status_and_more.py  0022_usersettings_wants_email_notifications_requests.py  0023_routestep_notified_at.py  0024_alter_deliverylog_route_alter_deliverylog_route_step_and_more.py  0025_packet_is_cancelled.py
turtlemail/templates/flatpages/: default.jinja
turtlemail/templates/registration/: signup_and_login.jinja
turtlemail/templates/turtlemail/: _activities.jinja  _chat.jinja  _chat_form.jinja  _chat_list.jinja  _chat_list_item.jinja  _chat_message.jinja  _delivery_requests_list.jinja  _instructions.jinja  _messages.jinja  _select_field.jinja  _stay_detail.jinja  _stays_create_form.jinja  _stays_create_form_success.jinja  _stays_form_date_field_script.jinja  _stays_update_form.jinja  _user_settings_form.jinja  base.jinja  chats.jinja  create_packet_form.jinja  deliveries.jinja  htmx_response.jinja  index.jinja  invite_user.jinja  layout.jinja  packet_detail.jinja  profile.jinja  public_layout.jinja  route_request_form.jinja  route_step_request_form.jinja  route_step_routing_form.jinja  stays.jinja  stays_edit.jinja  user_deleted.jinja
turtlemail/templates/turtlemail/emails/: invitation.jinja  notification_chat.jinja  notification_requests.jinja  report_problem.jinja
turtlemail/templates/turtlemail/icons/: carry.jinja  (+16 more)
turtlemail/templatetags/: turtlemail.py
turtlemail/tests/: __init__.py  test_routestep.py  test_routing.py  test_turtlestats.py
(+16 files in other folders)
