[tool.poetry]
name = "turtlemail"
version = "0.6.0"
description = ""
authors = ["turtlemail Maintainers <dev@turtlemail.org>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
django-jinja = "^2.11.0"
dj-database-url = "^2.1.0"
whitenoise = "^6.6.0"
python-dotenv = "^1.0.1"
# This is pinned to prevent different versions from
# changing the header in .po files
babel = "2.15.0"
pyyaml = "^6.0.1"
django-types = "^0.19.1"
psycopg = {extras = ["binary"], version = "^3.1.18"}
django-huey = "^1.2.1"
redis = "^5.0.6"
django-model-utils = "^4.5.1"


[tool.poetry.group.dev.dependencies]
# Since ipython conflicts with the commitizen package,
# I've removed it for now as it seemed unused.
# If that's a problem, we'll have to remove commitizen again
# ipython = "^8.22.2"
ruff = "^0.3.2"
pre-commit = "^3.6.2"
git-cliff = "^2.1.2"
djlint = "^1.34.1"


[tool.poetry.group.production.dependencies]
uvicorn = "^0.28.0"
sentry-sdk = "^1.41.0"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = false
major_version_zero = true


[tool.djlint]
# T003: allow endblock without specifying block name
# H030: allow missing meta description
# H031: allow missing meta tag
# H006: img tag should have height and width attributes
ignore = "T003,H030,H031,H006"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
